Pull request #1158: AG-12050 fix toggle
Merge in EXTENSIONS/browser-extension from fix/AG-12050 to master

Squashed commit of the following:

commit c6e1ad02b168264087edaad88b6faa4854cf6f49
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Dec 27 13:17:19 2021 +0300

    AG-12050 fix toggle

--- a/Extension/src/pages/options/components/Settings/Checkbox/checkbox.pcss
+++ b/Extension/src/pages/options/components/Settings/Checkbox/checkbox.pcss
@@ -53,7 +53,7 @@
         &:before {
             content: "";
             position: absolute;
-            top: -16px;
+            top: 0;
             left: 0;
             transform: translate(2px, 2px);
             z-index: 1;
@@ -64,6 +64,7 @@
             transition: var(--t3) transform;
 
             @media (min-width: 640px) {
+                top: -16px;
                 transform: translate(66px, 18px);
             }
         }
