--- a/Extension/src/pages/options/styles/common.pcss
+++ b/Extension/src/pages/options/styles/common.pcss
@@ -181,6 +181,24 @@ label.checkbox-label {
                 padding: 16px;
             }
 
+            &--back {
+                padding: 0 16px 16px 16px;
+
+                & .title__inner {
+                    padding-top: 16px;
+                }
+
+                & .checkbox__label {
+                    @media (min-width: 640px) {
+                        padding: 16px;
+
+                        &:before {
+                            top: 0;
+                        }
+                    }
+                }
+            }
+
             &--sub > .title__inner {
                 padding-top: 0;
             }
